Временно удалил description

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Частный вебмастер в Мурманске. Занимаюсь разработкой и обслуживанием сайтов, поисковой оптимизацией и интернет-маркетингом">
-  <title>Частный вебмастер Евгений Тигарев | Персональный сайт</title>
+  <meta name="description" content="">
+  <title>Вебмастер Евгений Тигарев | Персональный сайт</title>
   <meta name="yandex-verification" content="ed00eaf47947f997" />
   <meta name="google-site-verification" content="mTnE9zQ0-psxrqbpcDGqRllIv5ZV8I3cvDAIxI8Q1QA" />
 </head>
