--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
-  <title>Вебмастер Евгений Тигарев | Персональный сайт</title>
+  <title>Евгений Тигарев | Персональный сайт</title>
   <meta name="yandex-verification" content="ed00eaf47947f997" />
   <meta name="google-site-verification" content="mTnE9zQ0-psxrqbpcDGqRllIv5ZV8I3cvDAIxI8Q1QA" />
 </head>
